// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SegmentedBar > matches snapshot in dark mode 1`] = `
<div>
  <div
    aria-valuemax="1"
    aria-valuemin="0"
    aria-valuenow="0.6"
    class="MuiBox-root css-11vuetf"
    data-filled="6"
    data-segments="10"
    data-testid="segmented-bar"
    role="progressbar"
  >
    <div
      class="MuiBox-root css-26n1og"
      data-filled="true"
    />
    <div
      class="MuiBox-root css-26n1og"
      data-filled="true"
    />
    <div
      class="MuiBox-root css-26n1og"
      data-filled="true"
    />
    <div
      class="MuiBox-root css-26n1og"
      data-filled="true"
    />
    <div
      class="MuiBox-root css-26n1og"
      data-filled="true"
    />
    <div
      class="MuiBox-root css-26n1og"
      data-filled="true"
    />
    <div
      class="MuiBox-root css-5gwd4o"
      data-filled="false"
    />
    <div
      class="MuiBox-root css-5gwd4o"
      data-filled="false"
    />
    <div
      class="MuiBox-root css-5gwd4o"
      data-filled="false"
    />
    <div
      class="MuiBox-root css-5gwd4o"
      data-filled="false"
    />
  </div>
</div>
`;

exports[`SegmentedBar > matches snapshot in light mode 1`] = `
<div>
  <div
    aria-valuemax="1"
    aria-valuemin="0"
    aria-valuenow="0.6"
    class="MuiBox-root css-11vuetf"
    data-filled="6"
    data-segments="10"
    data-testid="segmented-bar"
    role="progressbar"
  >
    <div
      class="MuiBox-root css-1y9lb8o"
      data-filled="true"
    />
    <div
      class="MuiBox-root css-1y9lb8o"
      data-filled="true"
    />
    <div
      class="MuiBox-root css-1y9lb8o"
      data-filled="true"
    />
    <div
      class="MuiBox-root css-1y9lb8o"
      data-filled="true"
    />
    <div
      class="MuiBox-root css-1y9lb8o"
      data-filled="true"
    />
    <div
      class="MuiBox-root css-1y9lb8o"
      data-filled="true"
    />
    <div
      class="MuiBox-root css-j7xjho"
      data-filled="false"
    />
    <div
      class="MuiBox-root css-j7xjho"
      data-filled="false"
    />
    <div
      class="MuiBox-root css-j7xjho"
      data-filled="false"
    />
    <div
      class="MuiBox-root css-j7xjho"
      data-filled="false"
    />
  </div>
</div>
`;
